# piksel-desktop

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
applets/: CMakeLists.txt
applets/battery/: PanelBattery.cpp  PanelBattery.hpp
applets/bluetooth/: PanelBluetooth.cpp  PanelBluetooth.hpp
applets/clock/: PanelClock.cpp  PanelClock.hpp
applets/network/: PanelNetwork.cpp  PanelNetwork.hpp
applets/runningapps/: PanelRunningApps.hpp
core/src/: CMakeLists.txt  CoreService.cpp  CoreService.hpp
core/src/config/: Config.cpp  ReadMe.md
core/src/dbus/: ReadMe.md  piksel.core.xml
launcher/: CMakeLists.txt  Launcher.cpp  Launcher.hpp  LauncherAppsModel.cpp  LauncherAppsModel.hpp
launcher/qml/: LauncherCustomApps.qml
scripts/: ReadMe.md  dev.sh
settings/: CMakeLists.txt  SettingsWindow.cpp  SettingsWindow.hpp
settings/ui/: SettingsWindow.ui
shared/resources/: resources.qrc
shell/: AppDockModel.cpp  AppDockModel.hpp  CMakeLists.txt  PikselCoreClient.cpp  PikselCoreClient.hpp  PikselSystemClient.cpp  PikselSystemClient.hpp  ReadMe.md  ShellManager.cpp  ShellManager.hpp  main.cpp
shell/qml/: ReadMe.md
shell/qml/Launcher/: PikselLauncher.qml
shell/qml/Panel/: CalendarOverlay.qml  NetworkOverlay.qml  PikselPanel.qml  PinnedAppsOverlay.qml  VolumeOverlay.qml
shell/resources/: resources.qrc
shell/src/: ReadMe.md  main.cpp
shell/src/components/launcher/: CMakeLists.txt  Launcher.cpp  Launcher.hpp  LauncherAppsModel.hpp
shell/src/components/panel/: CMakeLists.txt  Panel.cpp  Panel.hpp  PanelBattery.cpp  PanelBattery.hpp  PanelClock.hpp  PanelNetwork.hpp  PanelRunningApps.cpp  PanelRunningApps.hpp
shell/src/components/settings/: SettingsWindow.hpp
shell/src/components/wallpaper/: CMakeLists.txt  Wallpaper.cpp  Wallpaper.hpp
shell/src/shell/: AppDockModel.cpp  AppDockModel.hpp  ReadMe.md  ShellComponent.hpp  ShellManager.hpp
shell/ui/: SettingsWallpaper.ui
surfaces/: CMakeLists.txt
surfaces/desktop/: Wallpaper.cpp  Wallpaper.hpp
surfaces/desktop/qml/: PikselWallpaper.qml
surfaces/panel/: Panel.cpp  Panel.hpp
surfaces/panel/qml/: BluetoothOverlay.qml  DockContextMenuOverlay.qml  PikselPanel.qml
system/: CMakeLists.txt  SystemService.cpp  SystemService.hpp
system/config/: Config.hpp
system/dbus/: ReadMe.md  piksel.system.xml
